--- a/src/sass/utilities/__variables.scss
+++ b/src/sass/utilities/__variables.scss
@@ -1,6 +1,10 @@
-// Colors
-$background-light: #FBFBFB;
-$background-dark: #000000;
+// Colors - light mode
+$background: #FBFBFB;
 $text-standard: #1F1F1F;
+$asset: #FFFFFF;
+$brand-01: #EC1718;
+$brand-02: #7D1919;
+
+// Colors - dark mode
+$background-dark: #000000;
 $text-dark: #FFFFFF;
-$asset-light: #FFFFFF;
