--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,72 +1,9 @@
 @use '@carbon/layout';
 @import 'utilities/__variables.scss';
+@import 'components/universal.scss';
 
 body {
     background-color: $background;
     font-family: 'Open Sans';
-
-}
-
-// Navigation Component
-.navigation {
-    height: 105px;
-    background-color: $asset;
-    justify-content: space-between;
-    position: fixed;
-    z-index: 1000;
-    display: flex;
-    top: 0;
-    right: 0;
-    left: 0;
-
-    &--col {
-        display: flex;
-        align-items: center;
-    }
-
-    &--homeIcon {
-        height: 105px;
-        margin-left: layout.$spacing-05;
-        img {
-            height: inherit;
-        }
-    }
-
-    &--items {
-        display: flex;
-        list-style-type: none;
-    }
-
-    &--item {
-        margin-right: layout.$spacing-06;
-
-        &:hover {
-            color: $brand-01;
-        }
-    }
-
-    &--profile-image-container {
-        width: 65px;
-        height: 65px;
-        position: relative;
-        overflow: hidden;
-        border-radius: 50%;
-        border: 2px solid $brand-01;
-        margin-right: layout.$spacing-06;
-    }
-}
-
-.primary-button{
-    position: relative;
-    padding: 10px 40px;
-    color: #b31227;
-    background: #ffffff;
-    border: 2px solid #b31227;
-    border-radius: 4px;
-    text-decoration: none;
-    transition: 0.2s;
-    &:hover{
-        background: #fce8eb;
-        cursor: pointer;
-    }
+    color: $text-standard;
 }
