Add checkbox and text input components, add Apply page content, student org content, start on Settings

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,6 +1,9 @@
 @use '@carbon/layout';
 @import 'utilities/__variables.scss';
 @import 'components/universal.scss';
+@import 'components/student-orgs.scss';
+@import 'components/apply.scss';
+@import 'components/settings.scss';
 
 body {
     background-color: $background;
