Style menu, display tab, account tab for Settings page, add disabled TextInput state, style Resources page

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -4,6 +4,7 @@
 @import 'components/student-orgs.scss';
 @import 'components/apply.scss';
 @import 'components/settings.scss';
+@import 'components/resources.scss';
 
 body {
     background-color: $background;
