--- a/src/sass/utilities/__variables.scss
+++ b/src/sass/utilities/__variables.scss
@@ -4,6 +4,9 @@ $text-standard: #1F1F1F;
 $asset: #FFFFFF;
 $brand-01: #EC1718;
 $brand-02: #7D1919;
+$brand-03: #b31227;
+$hover-01: #fce8eb;
+$hover-02: #795F62;
 
 // Colors - dark mode
 $background-dark: #000000;
