Add Training page, table component started

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -5,6 +5,7 @@
 @import 'components/apply.scss';
 @import 'components/settings.scss';
 @import 'components/resources.scss';
+@import 'components/training.scss';
 
 body {
     background-color: $background;
