--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -6,6 +6,7 @@
 @import 'components/settings.scss';
 @import 'components/resources.scss';
 @import 'components/training.scss';
+@import 'components/members.scss';
 
 body {
     background-color: $background;
