Add create event and meeting modals and bootstrap css

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -7,6 +7,8 @@
 @import 'components/resources.scss';
 @import 'components/training.scss';
 @import 'components/members.scss';
+@import 'components/events.scss';
+@import './index.scss';
 
 body {
     background-color: $background;
