--- a/src/sass/utilities/__variables.scss
+++ b/src/sass/utilities/__variables.scss
@@ -1,7 +1,8 @@
 // Colors - light mode
 $background: #FBFBFB;
 $text-standard: #1F1F1F;
-$asset: #FFFFFF;
+$asset1: #FFFFFF;
+$asset2: #000000;
 $brand-01: #EC1718;
 $brand-02: #7D1919;
 $brand-03: #b31227;
