--- a/src/sass/components/members.scss
+++ b/src/sass/components/members.scss
@@ -2,11 +2,11 @@
     box-sizing: content-box;
     display: flex;
     background: #ffffff;
-    padding: 15px 25px;
+    padding: 15px 35px 15px 25px;
     margin: 1%;
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
     border-radius: 4px;
-    border-bottom: 5px solid #b31227;
+    border-bottom: 9px solid #b31227;
     z-index: 1;
     flex: 1;
     align-items: center;
@@ -14,22 +14,52 @@
     max-width: 300px;
     flex-basis: 300px;
     color: #4b4b4b;
+
+    &:hover {
+        background-color: #3d161bb0;
+        border-bottom: 9px solid #3d161b;
+        color: $asset1;
+        cursor: pointer;
+        
+        .memberCard--email {
+            color: $asset1;
+        }
+    }
+
+    h1 {
+        margin: 0;
+        font-size: 20px;
+    }
+
+    p {
+        margin: 0;
+        font-size: 14px;
+    }
     
     &--profile-image {
         height: inherit;
         width: inherit;
         
         &-container {
-            width: 65px;
-            height: 65px;
+            width: 90px;
+            height: 90px;
             position: relative;
             overflow: hidden;
             border-radius: 50%;
             margin-right: layout.$spacing-06;
-            margin-top: layout.$spacing-05;
-            &:hover {
-                cursor: pointer;
-            }
         }
     }
+
+    &--student-info {
+        padding: 4px 0px;
+    }
+
+    &--email {
+        color: $brand-03;
+    }
+}
+
+.members--table {
+    display: flex;
+    flex-wrap: wrap;
 }
