Home page design, event card

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,6 +1,7 @@
 @use '@carbon/layout';
 @import 'utilities/__variables.scss';
 @import 'components/universal.scss';
+@import 'components/home.scss';
 @import 'components/student-orgs.scss';
 @import 'components/apply.scss';
 @import 'components/settings.scss';
