--- a/src/sass/utilities/__variables.scss
+++ b/src/sass/utilities/__variables.scss
@@ -5,7 +5,7 @@ $asset1: #FFFFFF;
 $asset2: #000000;
 $brand-01: #EC1718;
 $brand-02: #7D1919;
-$brand-03: #b31227;
+$brand-03: #B31227;
 $hover-01: #fce8eb;
 $hover-02: #795F62;
 
