--- a/src/sass/components/events.scss
+++ b/src/sass/components/events.scss
@@ -1,3 +1,46 @@
+.eventCard {
+    box-sizing: content-box;
+    display: flex;
+    background: #ffffff;
+    padding: 24px;
+    margin: 1%;
+    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+    border-radius: 4px;
+    border-bottom: 9px solid $brand-02;
+    z-index: 1;
+    flex: 1;
+    align-items: center;
+    transition: 0.3s;
+    max-width: 300px;
+    flex-basis: 300px;
+    color: #4b4b4b;
+
+    &:hover {
+        background-color: #3d161bb0;
+        border-bottom: 9px solid #3d161b;
+        color: $asset1;
+        cursor: pointer;
+        
+        .eventCard--email {
+            color: $asset1;
+        }
+    }
+
+    h2 {
+        margin: 0;
+        font-size: 20px;
+    }
+
+    p {
+        margin: 0;
+        font-size: 14px;
+    }
+
+    &--details {
+        font-style: italic;
+    }
+}
+
 .events {
     &--modal {
         position: absolute;
