--- a/src/sass/components/members.scss
+++ b/src/sass/components/members.scss
@@ -6,7 +6,7 @@
     margin: 1%;
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
     border-radius: 4px;
-    border-bottom: 9px solid #b31227;
+    border-bottom: 9px solid $brand-03;
     z-index: 1;
     flex: 1;
     align-items: center;
