--- a/src/sass/components/home.scss
+++ b/src/sass/components/home.scss
@@ -1,10 +1,10 @@
 .home {
     &--featured-ambassadors {
         display: flex;
-        flex-wrap: wrap;
     }
 
     &--upcoming-events {
-        display: flex;
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
     }
 }
