--- a/src/sass/components/members.scss
+++ b/src/sass/components/members.scss
@@ -2,7 +2,7 @@
     box-sizing: content-box;
     display: flex;
     background: #ffffff;
-    padding: 15px 35px 15px 25px;
+    padding: 15px;
     margin: 1%;
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
     border-radius: 4px;
@@ -12,7 +12,7 @@
     align-items: center;
     transition: 0.3s;
     max-width: 300px;
-    flex-basis: 300px;
+    flex-basis: 250px;
     color: #4b4b4b;
 
     &:hover {
@@ -28,12 +28,12 @@
 
     h1 {
         margin: 0;
-        font-size: 20px;
+        font-size: 18px;
     }
 
     p {
         margin: 0;
-        font-size: 14px;
+        font-size: 12px;
     }
     
     &--profile-image {
@@ -41,12 +41,12 @@
         width: inherit;
         
         &-container {
-            width: 90px;
-            height: 90px;
+            width: 75px;
+            height: 75px;
             position: relative;
             overflow: hidden;
             border-radius: 50%;
-            margin-right: layout.$spacing-06;
+            margin-right: layout.$spacing-05;
         }
     }
 
@@ -59,7 +59,23 @@
     }
 }
 
-.members--table {
-    display: flex;
-    flex-wrap: wrap;
+@media (min-width: 42rem) {
+    .members--table {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    }
+}
+
+// @media (min-width: 66rem) {
+//     .members--table {
+//         display: grid;
+//         grid-template-columns: repeat(4,1fr);
+//     }
+// }
+
+@media (min-width: 108rem) {
+    .members--table {
+        display: grid;
+        grid-template-columns: repeat(5,1fr);
+    }
 }
